<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tools:context=".ui.home.HomeFragment"
    android:clipChildren="false">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/notification_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="⚠️ 상황별 대응법 확인하기 ⚠️"
            android:textSize="13sp"
            android:textColor="@color/arrow_blue"
            android:textAlignment="center"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nav_camera"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginVertical="20dp"
        android:layout_marginLeft="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/notification_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nav_map">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_car" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_button"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nav_map"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/notification_card"
        app:layout_constraintStart_toEndOf="@id/nav_camera"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/RoundShadowButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_driver" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_button"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nav_dashboard"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/nav_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/RoundShadowButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_rank" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_button"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>